[package]
name = "usb-reboot-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
usbd-reboot = { path = "../usbd-reboot", version = "0.1.0", default-features = false }
log = "0.4"
pretty_env_logger = "0.4"

