[package]
name = "usbd-reboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = { version = "0.2.8", features = ["control-buffer-256"], optional = true }
rp2040-hal = { version = "0.8", optional = true }

[features]
default = [ "usb-device" ]
